--- a/package.json
+++ b/package.json
@@ -2,22 +2,47 @@
   "name": "boilerplate-fullstack",
   "version": "0.0.0",
   "description": "Fullstack example application",
-  "main": "server/server.js",
+  "main": "server/index.js",
   "dependencies": {
+    "babel-polyfill": "6.20.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-register": "6.18.0",
+    "express": "4.14.0",
     "sequelize": "3.28.0",
     "sqlite3": "3.1.8"
   },
   "devDependencies": {
+    "chai": "3.5.0",
+    "cheerio": "0.22.0",
+    "istanbul": "github:thgaskell/istanbul#handle-sigterm",
+    "mocha": "3.2.0",
+    "npm-run-all": "4.0.0",
     "rimraf": "2.5.4",
-    "sequelize-cli": "2.5.1"
+    "sequelize-cli": "2.5.1",
+    "sinon": "1.17.7",
+    "sinon-chai": "2.8.0",
+    "supertest": "2.0.1",
+    "wait-on": "2.0.1"
   },
   "scripts": {
+    "chimp": "chimp --browser=${CHIMP_BROWSER}",
     "db:provision": "rimraf data/${NODE_ENV}.sqlite && sequelize db:migrate --config server/config/config.js --migrations-path server/migrations",
     "db:seed": "sequelize db:seed:all --seeders-path server/seeders/seed --config server/config/config.js",
     "db:seed:mock": "sequelize db:seed:all --seeders-path server/seeders/test --config server/config/config.js",
     "db:seed:all": "npm-run-all db:seed db:seed:mock",
     "db:seed:development": "NODE_ENV=development npm-run-all db:provision db:seed:all",
     "db:seed:test": "NODE_ENV=test npm-run-all db:provision db:seed:all",
+    "start": "NODE_ENV=${NODE_ENV:=development} node server",
+    "test": "NODE_ENV=test npm-run-all test:unit test:integration test:acceptance",
+    "pretest:acceptance": "npm run db:seed:test",
+    "test:acceptance": "NODE_ENV=test PORT=${PORT:=8080} npm-run-all -p -r test:webdriver test:cover",
+    "test:cover": "NODE_ENV=test istanbul cover server/index.js --handle-sigint",
+    "pretest:integration": "npm run db:seed:test",
+    "test:integration": "npm run test:mocha -- \"test/**/*spec*\"",
+    "test:mocha": "NODE_ENV=test mocha --require babel-polyfill --compilers js:babel-register",
+    "test:unit": "npm run test:mocha -- \"server/**/*spec*\"",
+    "test:webdriver": "ROOT_URL=http://localhost:${PORT} npm-run-all wait-on:server chimp",
+    "wait-on:server": "wait-on ${ROOT_URL}"
   },
   "author": "Tony Gaskell <tony@sudokrew.com>",
   "license": "ISC"
