--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
   "presets": [
-    "es2015"
+    "es2015",
+    "react",
   ],
   "plugins": [
     "syntax-async-functions",
-    "transform-async-to-generator"
+    "transform-async-to-generator",
   ]
 }
