--- a/package.json
+++ b/package.json
@@ -20,20 +20,53 @@
     "sqlite3": "3.1.8"
   },
   "devDependencies": {
+    "babel-loader": "6.2.10",
+    "babel-plugin-istanbul": "3.1.2",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
     "chai": "3.5.0",
+    "chai-enzyme": "0.6.1",
     "cheerio": "0.22.0",
+    "chimp": "0.46.0",
+    "css-loader": "0.26.1",
+    "enzyme": "2.7.0",
+    "ignore-loader": "0.1.2",
     "istanbul": "github:thgaskell/istanbul#handle-sigterm",
+    "istanbul-lib-coverage": "1.0.0",
+    "json-loader": "0.5.4",
+    "karma": "1.3.0",
+    "karma-chai-plugins": "0.8.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-firefox-launcher": "1.0.0",
+    "karma-mocha": "1.3.0",
+    "karma-sinon": "1.0.5",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "2.0.1",
     "mocha": "3.2.0",
     "npm-run-all": "4.0.0",
+    "postcss-cssnext": "2.9.0",
+    "postcss-import": "9.1.0",
+    "postcss-loader": "1.2.2",
+    "postcss-reporter": "3.0.0",
+    "react": "15.4.2",
+    "react-addons-test-utils": "15.4.2",
+    "react-dom": "15.4.2",
     "rimraf": "2.5.4",
     "sequelize-cli": "2.5.1",
     "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
+    "style-loader": "0.13.1",
     "supertest": "2.0.1",
-    "wait-on": "2.0.1"
+    "wait-on": "2.0.1",
+    "webpack": "2.2.0-rc.4",
+    "webpack-dev-server": "2.2.0-rc.0",
+    "webpack-merge": "2.4.0"
   },
   "scripts": {
+    "build": "webpack --config webpack.config.${NODE_ENV}.babel.js",
+    "build:test": "NODE_ENV=test npm run build",
     "chimp": "chimp --browser=${CHIMP_BROWSER}",
+    "clean": "rimraf public",
     "db:provision": "rimraf data/${NODE_ENV}.sqlite && sequelize db:migrate --config server/config/config.js --migrations-path server/migrations",
     "db:seed": "sequelize db:seed:all --seeders-path server/seeders/seed --config server/config/config.js",
     "db:seed:mock": "sequelize db:seed:all --seeders-path server/seeders/test --config server/config/config.js",
@@ -41,16 +74,20 @@
     "db:seed:development": "NODE_ENV=development npm-run-all db:provision db:seed:all",
     "db:seed:test": "NODE_ENV=test npm-run-all db:provision db:seed:all",
     "start": "NODE_ENV=${NODE_ENV:=development} node server",
-    "test": "NODE_ENV=test npm-run-all test:unit test:integration test:acceptance",
+    "test": "NODE_ENV=test npm-run-all test:unit:backend test:integration:backend test:acceptance",
     "pretest:acceptance": "npm run db:seed:test",
     "test:acceptance": "NODE_ENV=test PORT=${PORT:=8080} npm-run-all -p -r test:webdriver test:cover",
-    "test:cover": "NODE_ENV=test istanbul cover server/index.js --handle-sigint",
-    "pretest:integration": "npm run db:seed:test",
-    "test:integration": "npm run test:mocha -- \"test/**/*spec*\"",
+    "posttest:cover": "NODE_ENV=test istanbul report --include \"coverage/*coverage*.json\" lcov",
+    "pretest:cover": "npm run build:test",
+    "test:cover": "NODE_ENV=test PORT=${PORT:=8080} istanbul cover server/index.js --handle-sigint",
+    "pretest:integration:backend": "npm run db:seed:test",
+    "test:integration:backend": "npm run test:mocha -- \"test/backend/**/*spec*\"",
     "test:mocha": "NODE_ENV=test mocha --require babel-polyfill --compilers js:babel-register",
-    "test:unit": "npm run test:mocha -- \"server/**/*spec*\"",
+    "test:unit:backend": "npm run test:mocha -- \"server/**/*spec*\"",
+    "test:unit:frontend": "karma start karma.conf.js",
     "test:webdriver": "ROOT_URL=http://localhost:${PORT} npm-run-all wait-on:server chimp",
-    "wait-on:server": "wait-on ${ROOT_URL}"
+    "wait-on:server": "wait-on ${ROOT_URL}",
+    "blah-coverage-report": "istanbul report --root coverage lcov"
   },
   "author": "Tony Gaskell <tony@sudokrew.com>",
   "license": "ISC"
