--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "chai-enzyme": "0.6.1",
     "cheerio": "0.22.0",
     "chimp": "0.46.0",
+    "classnames": "2.2.5",
     "css-loader": "0.26.1",
     "enzyme": "2.7.0",
     "ignore-loader": "0.1.2",
     "istanbul": "github:thgaskell/istanbul#handle-sigterm",
     "istanbul-lib-coverage": "1.0.0",
+    "jquery": "3.1.1",
     "json-loader": "0.5.4",
     "karma": "1.3.0",
     "karma-chai-plugins": "0.8.0",
@@ -53,7 +55,7 @@
     "react-dom": "15.4.2",
     "rimraf": "2.5.4",
     "sequelize-cli": "2.5.1",
-    "sinon": "1.17.7",
+    "sinon": "2.0.0-pre.5",
     "sinon-chai": "2.8.0",
     "style-loader": "0.13.1",
     "supertest": "2.0.1",
