Update README with test commands

--- a/package.json
+++ b/package.json
@@ -84,11 +84,13 @@
     "test:cover": "NODE_ENV=test PORT=${PORT:=8080} istanbul cover server/index.js --handle-sigint --dir coverage/backend",
     "posttest:cover": "npm run test:cover:report:frontend",
     "test:cover:report:frontend": "istanbul report --include coverage/frontend/coverage.json --dir coverage/frontend",
+    "test:integration": "npm-run-all test:integration:backend",
     "pretest:integration:backend": "npm run db:seed:test",
     "test:integration:backend": "npm run test:mocha -- \"test/backend/**/*spec*\"",
     "test:mocha": "NODE_ENV=test mocha --require babel-polyfill --compilers js:babel-register",
-    "test:unit:backend": "npm run test:mocha -- \"server/**/*spec*\"",
-    "test:unit:frontend": "karma start karma.conf.js",
+    "test:unit": "npm-run-all test:unit:backend test:unit:frontend",
+    "test:unit:backend": "NODE_ENV=test npm run test:mocha -- \"server/**/*spec*\"",
+    "test:unit:frontend": "NODE_ENV=test karma start karma.conf.js",
     "test:webdriver": "ROOT_URL=http://localhost:${PORT} npm-run-all wait-on:server chimp",
     "wait-on:server": "wait-on ${ROOT_URL}"
   },
